Add interface-independent LAN discovery